force-app/main/default/objects/Job_Application__c/fields/Annual_Gross_Income_Curr__c.field-meta.xml
<CustomField>
    <fullName>Annual_Gross_Income_Curr__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Think of this as your salary, or the sum of your wages and tips, plus any income from interest, dividends, alimony, retirement distributions, unemployment compensation and Social Security benefits.</inlineHelpText>
    <label>Annual Gross Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>