force-app/main/default/objects/Job_Application__c/fields/Company_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The company where the job application is being sent, linked to an Account record.</description>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>