force-app/main/default/objects/Job_Application__c/fields/Deduction_Type_Pckl__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Type_Pckl__c</fullName>
    <inlineHelpText>A fixed dollar amount based on your income and tax filing status that reduces the amount you’re taxed on. Consider it tax-free income that you keep before taxes apply to the rest.</inlineHelpText>
    <label>Deduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard deduction</fullName>
                <default>true</default>
                <label>Standard deduction</label>
            </value>
            <value>
                <fullName>Itemized deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>