force-app/main/default/objects/Job_Application__c/fields/Estimated_Federal_Tax_Curr__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Federal_Tax_Curr__c</fullName>
    <label>Estimated Federal Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>