force-app/main/default/objects/Job_Application__c/fields/Itemized_Deductions_Curr__c.field-meta.xml
<CustomField>
    <fullName>Itemized_Deductions_Curr__c</fullName>
    <inlineHelpText>IRS-allowed expenses that can directly reduce your taxable income. Consider this if your individual expenses add up to more than the standard deduction.</inlineHelpText>
    <label>Itemized Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>