force-app/main/default/objects/Job_Application__c/fields/Location_Pckl__c.field-meta.xml
<CustomField>
    <fullName>Location_Pckl__c</fullName>
    <description>The job location or indication if it&apos;s remote.</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>