force-app/main/default/objects/Job_Application__c/fields/Location_Txt__c.field-meta.xml
<CustomField>
    <fullName>Location_Txt__c</fullName>
    <description>The job location</description>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>