force-app/main/default/objects/Job_Application__c/fields/Notes_Txt__c.field-meta.xml
<CustomField>
    <fullName>Notes_Txt__c</fullName>
    <description>Additional notes related to the application.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>