force-app/main/default/objects/Job_Application__c/fields/Number_of_Related_Contacts_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Related_Contacts_Rollup__c</fullName>
    <label>Number of Related Contacts</label>
    <summaryForeignKey>Job_Application_Contact__c.Job_Application_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>