force-app/main/default/objects/Job_Application__c/fields/Position_Title_Txt__c.field-meta.xml
<CustomField>
    <fullName>Position_Title_Txt__c</fullName>
    <description>A text field to keep track of the specific job title or position being applied for.</description>
    <label>Position/Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>