force-app/main/default/objects/Job_Application__c/fields/Record_ID_18_Digit_Txt__c.field-meta.xml
<CustomField>
    <fullName>Record_ID_18_Digit_Txt__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record ID (18-Digit)</label>
    <type>Text</type>
</CustomField>