force-app/main/default/objects/Job_Application__c/fields/Status_Pckl__c.field-meta.xml
<CustomField>
    <fullName>Status_Pckl__c</fullName>
    <description>The current status of the job application. Options: &apos;Saved&apos;, &apos;Applying&apos;, &apos;Applied&apos;, &apos;Interviewing&apos;, &apos;Negotiating&apos;, &apos;Accepted&apos;, &apos;Closed&apos;.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Applying</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Interviewing</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>