force-app/main/default/objects/Job_Application__c/fields/Tax_Due_Refund_Curr__c.field-meta.xml
<CustomField>
    <fullName>Tax_Due_Refund_Curr__c</fullName>
    <label>Tax Due/Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>