force-app/main/default/objects/Job_Application__c/fields/Tax_Filing_Status_Pckl__c.field-meta.xml
<CustomField>
    <fullName>Tax_Filing_Status_Pckl__c</fullName>
    <label>Tax Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married, filing jointly</fullName>
            </value>
            <value>
                <fullName>Married, filing separately</fullName>
            </value>
            <value>
                <fullName>Head of household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>