force-app/main/default/objects/Job_Application__c/fields/Taxable_Income_Curr__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Income_Curr__c</fullName>
    <label>Taxable Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>