force-app/main/default/objects/Job_Application__c/fields/Taxes_Withheld_Curr__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Withheld_Curr__c</fullName>
    <inlineHelpText>The amount your employer takes out of your paycheck to pay to the government. If you pay estimated taxes for non-wage income, you can include the amount paid here.</inlineHelpText>
    <label>Taxes Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>