force-app/main/default/objects/Job_Application__c/validationRules/JAPP01_TaxFilingStatusRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>JAPP01_TaxFilingStatusRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Tax_Filing_Status_Pckl__c)
&amp;&amp;
ISBLANK(TEXT(Tax_Filing_Status_Pckl__c))</errorConditionFormula>
    <errorDisplayField>Tax_Filing_Status_Pckl__c</errorDisplayField>
    <errorMessage>[JAPP01] A tax filing status is required.</errorMessage>
</ValidationRule>