force-app/main/default/objects/Job_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status_Pckl__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>